layout bugfix: left part of cart-product error message was not visible

--- a/webroot/css/frontend.css
+++ b/webroot/css/frontend.css
@@ -1084,8 +1084,11 @@ body.carts .cart:not(#cart) ul.error-message:not(.global) {
     width: 102%;
     float: left;
     padding: 15px 10px 10px 40px;
-    margin-left: -10px;
-    margin-top: -10px;
+    margin-left: -7px;
+    margin-top: -7px;
+}
+body.carts .cart:not(#cart) ul.error-message:not(.global) li {
+    padding-left: 20px;
 }
 body.carts .cart:not(#cart) .btn-success.btn-order {
     font-size: 18px;
